--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": [
     "gulp-web-modules",
-    "gulpWebModules"
+    "gulpWebModulePlugin"
   ],
   "licenses": {
     "type": "MIT",
