--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/jhudson8/gwm-lib/raw/master/LICENSE"
   },
   "dependencies": {
-    "event-stream": "~3.1",
+    "through2": "~0.4",
     "gwm-util": "~0.0"
   }
 }
